[package]
name = "ws-ckpt-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
toml = "0.8"
async-trait = "0.1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
